bug fix display flex stretching image fixed by align self css prop

--- a/maaya-oh/css/theme/main.css
+++ b/maaya-oh/css/theme/main.css
@@ -211,4 +211,5 @@
 	height: auto;
 	flex: 0 0 auto;
 	padding: 5px;
+	align-self: center;
 }
